--- a/02.developer-productivity/package.json
+++ b/02.developer-productivity/package.json
@@ -7,5 +7,8 @@
     "start": "node index.js"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "prettier": "^2.8.3"
+  }
 }
